--- a/index.html
+++ b/index.html
@@ -65,18 +65,23 @@
         <h2>Our Team</h2>
         <ul>
           <li>
-            <img src="/images/img-3.jpg" alt="Mark" width="260" height="262" />
+            <img
+              src="../images/img-3.jpg"
+              alt="Mark"
+              width="260"
+              height="262"
+            />
             <p>Mark Guerrero</p>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="/images/img-2.jpg" alt="Tom" width="260" height="262" />
+            <img src="../images/img-2.jpg" alt="Tom" width="260" height="262" />
             <p>Tom Ford</p>
             <p>Camila Garcia</p>
           </li>
           <li>
             <img
-              src="/images/img-1.jpg"
+              src="../images/img-1.jpg"
               alt="Camila"
               width="260"
               height="262"
@@ -85,7 +90,12 @@
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="/images/img.jpg" alt="Daniel" width="260" height="262" />
+            <img
+              src="../images/img.jpg"
+              alt="Daniel"
+              width="260"
+              height="262"
+            />
             <p>Marketing</p>
             <p>UI Designer</p>
           </li>
