--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <nav>
-        <a href="/index.html">webstudio</a>
+        <a href="./index.html">WebStudio</a>
         <ul>
           <li><a href="#">Studio</a></li>
           <li><a href="#">Portfolio</a></li>
@@ -18,41 +18,48 @@
       </nav>
 
       <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        <address>
+          <li>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li>
+            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+          </li>
+        </address>
       </ul>
     </header>
     <main>
       <section>
         <h1>Effective Solutions for Your Business</h1>
-        <button>Order Service</button>
+        <button type="button">Order Service</button>
       </section>
 
       <section>
+        <h2>section 2</h2>
         <ul>
           <li>
-            <h2>Strategy</h2>
+            <h3>Strategy</h3>
             <p>
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h2>Punctuality</h2>
+            <h3>Punctuality</h3>
             <p>
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h2>Diligence</h2>
+            <h3>Diligence</h3>
             <p>
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h2>Technologies</h2>
+            <h3>Technologies</h3>
             <p>
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
@@ -65,35 +72,35 @@
         <h2>Our Team</h2>
         <ul>
           <li>
-            <img src="./images/img-3.jpg" alt="Mark" width="260" height="262" />
-            <p>Mark Guerrero</p>
+            <img src="./images/img-3.jpg" alt="Mark" width="264" height="262" />
+            <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="./images/img-2.jpg" alt="Tom" width="260" height="262" />
-            <p>Tom Ford</p>
+            <img src="./images/img-2.jpg" alt="Tom" width="264" height="262" />
+            <h3>Tom Ford</h3>
             <p>Camila Garcia</p>
           </li>
           <li>
             <img
               src="./images/img-1.jpg"
               alt="Camila"
-              width="260"
+              width="264"
               height="262"
             />
-            <p>Daniel Wilson</p>
+            <h3>Daniel Wilson</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="./images/img.jpg" alt="Daniel" width="260" height="262" />
-            <p>Marketing</p>
+            <img src="./images/img.jpg" alt="Daniel" width="264" height="262" />
+            <h3>Marketing</h3>
             <p>UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <footer>
-      <h2>Web Studio</h2>
+      <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
