--- a/index.html
+++ b/index.html
@@ -16,17 +16,14 @@
           <li><a href="#">Contacts</a></li>
         </ul>
       </nav>
-
-      <ul>
-        <address>
-          <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-          </li>
-          <li>
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
-          </li>
-        </address>
-      </ul>
+      <address>
+        <li>
+          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </li>
+        <li>
+          <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+        </li>
+      </address>
     </header>
     <main>
       <section>
@@ -79,7 +76,7 @@
           <li>
             <img src="./images/img-2.jpg" alt="Tom" width="264" height="262" />
             <h3>Tom Ford</h3>
-            <p>Camila Garcia</p>
+            <p>Frontend Developer</p>
           </li>
           <li>
             <img
@@ -88,12 +85,12 @@
               width="264"
               height="262"
             />
-            <h3>Daniel Wilson</h3>
-            <p>Frontend Developer</p>
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
           </li>
           <li>
             <img src="./images/img.jpg" alt="Daniel" width="264" height="262" />
-            <h3>Marketing</h3>
+            <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
         </ul>
