--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </section>
 
       <section>
-        <h2>section 2</h2>
+        <h2>Advantages</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
