--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,700;1,700&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
     <link
@@ -20,7 +20,9 @@
   <body>
     <header>
       <nav>
-        <a href="./index.html"><span class="accent">Web</span>Studio</a>
+        <a href="./index.html" class="title"
+          ><span class="accent">Web</span>Studio</a
+        >
         <ul>
           <li><a href="#">Studio</a></li>
           <li><a href="#">Portfolio</a></li>
@@ -39,38 +41,38 @@
       </address>
     </header>
     <main>
-      <section>
+      <section class="hero">
         <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
       </section>
 
-      <section>
-        <h2>Advantages</h2>
+      <section class="advantages">
+        <h2 class="section-title">Advantages</h2>
         <ul>
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="section-subtitle">Strategy</h3>
+            <p class="section-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="section-subtitle">Punctuality</h3>
+            <p class="section-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="section-subtitle">Diligence</h3>
+            <p class="section-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="section-subtitle">Technologies</h3>
+            <p class="section-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -78,18 +80,18 @@
         </ul>
       </section>
 
-      <section>
-        <h2>Our Team</h2>
+      <section class="team">
+        <h2 class="section-title">Our Team</h2>
         <ul>
           <li>
             <img src="./images/img-3.jpg" alt="Mark" width="264" height="262" />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="section-subtitle">Mark Guerrero</h3>
+            <p class="section-text">Product Designer</p>
           </li>
           <li>
             <img src="./images/img-2.jpg" alt="Tom" width="264" height="262" />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="section-subtitle">Tom Ford</h3>
+            <p class="section-text">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -98,23 +100,24 @@
               width="264"
               height="262"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="section-subtitle">Camila Garcia</h3>
+            <p class="section-text">Marketing</p>
           </li>
           <li>
             <img src="./images/img.jpg" alt="Daniel" width="264" height="262" />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="section-subtitle">Daniel Wilson</h3>
+            <p class="section-text">UI Designer</p>
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Our Portfolio</h2>
+
+      <section class="portfolio">
+        <h2 class="section-title">Our Portfolio</h2>
         <ul>
           <li>
             <img src="./images/banking-app.jpg" alt="Banking App" width="360" />
-            <h3>Banking App</h3>
-            <p>App</p>
+            <h3 class="section-subtitle">Banking App</h3>
+            <p class="section-text">App</p>
           </li>
           <li>
             <img
@@ -122,8 +125,8 @@
               alt="Cashless Payment"
               width="360"
             />
-            <h3>Cashless Payment</h3>
-            <p>Marketing</p>
+            <h3 class="section-subtitle">Cashless Payment</h3>
+            <p class="section-text">Marketing</p>
           </li>
           <li>
             <img
@@ -131,8 +134,8 @@
               alt="Meditation App"
               width="360"
             />
-            <h3>Meditation App</h3>
-            <p>App</p>
+            <h3 class="section-subtitle">Meditation App</h3>
+            <p class="section-text">App</p>
           </li>
           <li>
             <img
@@ -140,8 +143,8 @@
               alt="Taxi Service"
               width="360"
             />
-            <h3>Taxi Service</h3>
-            <p>Marketing</p>
+            <h3 class="section-subtitle">Taxi Service</h3>
+            <p class="section-text">Marketing</p>
           </li>
           <li>
             <img
@@ -149,8 +152,8 @@
               alt="Screen Illustrations"
               width="360"
             />
-            <h3>Screen Illustrations</h3>
-            <p>Design</p>
+            <h3 class="section-subtitle">Screen Illustrations</h3>
+            <p class="section-text">Design</p>
           </li>
           <li>
             <img
@@ -158,14 +161,14 @@
               alt="Online Courses"
               width="360"
             />
-            <h3>Online Courses</h3>
-            <p>Marketing</p>
+            <h3 class="section-subtitle">Online Courses</h3>
+            <p class="section-text">Marketing</p>
           </li>
         </ul>
       </section>
     </main>
     <footer>
-      <a href="./index.html">WebStudio</a>
+      <a href="./index.html"><span class="accent">Web</span>Studio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
