--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
   <body>
     <header>
       <nav>
-        <a href="./index.html" class="title"
+        <a class="logo" href="./index.html" class="title"
           ><span class="accent">Web</span>Studio</a
         >
         <ul>
-          <li><a href="#">Studio</a></li>
-          <li><a href="#">Portfolio</a></li>
-          <li><a href="#">Contacts</a></li>
+          <li><a class="nav-list" href="#">Studio</a></li>
+          <li><a class="nav-list" href="#">Portfolio</a></li>
+          <li><a class="nav-list" href="#">Contacts</a></li>
         </ul>
       </nav>
       <address>
