--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
   <body>
     <header>
       <nav>
-        <a class="logo" href="./index.html" class="title"
-          ><span class="accent">Web</span>Studio</a
+        <a href="./index.html" class="logo"
+          >Web<span class="accent">Studio</span></a
         >
         <ul>
-          <li><a class="nav-list" href="#">Studio</a></li>
-          <li><a class="nav-list" href="#">Portfolio</a></li>
-          <li><a class="nav-list" href="#">Contacts</a></li>
+          <li><a class="nav-list" href="./index.html">Studio</a></li>
+          <li><a class="nav-list" href="">Portfolio</a></li>
+          <li><a class="nav-list" href="">Contacts</a></li>
         </ul>
       </nav>
       <address>
@@ -42,8 +42,8 @@
     </header>
     <main>
       <section class="hero">
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+        <h1 class="main-title">Effective Solutions for Your Business</h1>
+        <button class="hero-button" type="button">Order Service</button>
       </section>
 
       <section class="advantages">
@@ -83,17 +83,17 @@
       <section class="team">
         <h2 class="section-title">Our Team</h2>
         <ul>
-          <li>
+          <li class="section-list">
             <img src="./images/img-3.jpg" alt="Mark" width="264" height="262" />
             <h3 class="section-subtitle">Mark Guerrero</h3>
             <p class="section-text">Product Designer</p>
           </li>
-          <li>
+          <li class="section-list">
             <img src="./images/img-2.jpg" alt="Tom" width="264" height="262" />
             <h3 class="section-subtitle">Tom Ford</h3>
             <p class="section-text">Frontend Developer</p>
           </li>
-          <li>
+          <li class="section-list">
             <img
               src="./images/img-1.jpg"
               alt="Camila"
@@ -103,7 +103,7 @@
             <h3 class="section-subtitle">Camila Garcia</h3>
             <p class="section-text">Marketing</p>
           </li>
-          <li>
+          <li class="section-list">
             <img src="./images/img.jpg" alt="Daniel" width="264" height="262" />
             <h3 class="section-subtitle">Daniel Wilson</h3>
             <p class="section-text">UI Designer</p>
@@ -167,9 +167,11 @@
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html"><span class="accent">Web</span>Studio</a>
-      <p>
+    <footer class="footer">
+      <a class="footer-logo" href="./index.html"
+        >Web<span class="footer-accent">Studio</span></a
+      >
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
