--- a/index.html
+++ b/index.html
@@ -29,13 +29,17 @@
           <li><a class="nav-list" href="">Contacts</a></li>
         </ul>
       </nav>
-      <address>
+      <address class="contacts">
         <ul>
           <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="contacts-list" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
           </li>
           <li>
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a class="contacts-list" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
