--- a/index.html
+++ b/index.html
@@ -14,171 +14,209 @@
       rel="stylesheet"
       href="https://cdnjs.com/libraries/modern-normalize"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+      integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
   <body>
     <header>
-      <nav>
-        <a href="./index.html" class="logo"
-          >Web<span class="accent">Studio</span></a
-        >
-        <ul>
-          <li><a class="nav-list" href="./index.html">Studio</a></li>
-          <li><a class="nav-list" href="">Portfolio</a></li>
-          <li><a class="nav-list" href="">Contacts</a></li>
-        </ul>
-      </nav>
-      <address class="contacts">
-        <ul>
-          <li>
-            <a class="contacts-list" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a class="contacts-list" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="container">
+        <nav>
+          <a href="./index.html" class="logo"
+            >Web<span class="accent">Studio</span></a
+          >
+          <ul>
+            <li><a class="nav-list" href="./index.html">Studio</a></li>
+            <li><a class="nav-list" href="">Portfolio</a></li>
+            <li><a class="nav-list" href="">Contacts</a></li>
+          </ul>
+        </nav>
+        <address class="contacts">
+          <ul>
+            <li>
+              <a class="contacts-list" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="contacts-list" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main>
-      <section class="hero">
-        <h1 class="main-title">Effective Solutions for Your Business</h1>
-        <button class="hero-button" type="button">Order Service</button>
+      <section class="hero section">
+        <div class="container">
+          <h1 class="main-title">Effective Solutions for Your Business</h1>
+          <button class="hero-button" type="button">Order Service</button>
+        </div>
       </section>
 
-      <section class="advantages">
-        <h2 class="section-title">Advantages</h2>
-        <ul>
-          <li>
-            <h3 class="section-subtitle">Strategy</h3>
-            <p class="section-text">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li>
-            <h3 class="section-subtitle">Punctuality</h3>
-            <p class="section-text">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li>
-            <h3 class="section-subtitle">Diligence</h3>
-            <p class="section-text">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3 class="section-subtitle">Technologies</h3>
-            <p class="section-text">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+      <section class="advantages section">
+        <div class="container">
+          <h2 class="section-title">Advantages</h2>
+          <ul>
+            <li>
+              <h3 class="section-subtitle">Strategy</h3>
+              <p class="section-text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li>
+              <h3 class="section-subtitle">Punctuality</h3>
+              <p class="section-text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li>
+              <h3 class="section-subtitle">Diligence</h3>
+              <p class="section-text">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li>
+              <h3 class="section-subtitle">Technologies</h3>
+              <p class="section-text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
 
-      <section class="team">
-        <h2 class="section-title">Our Team</h2>
-        <ul>
-          <li class="section-list">
-            <img src="./images/img-3.jpg" alt="Mark" width="264" height="262" />
-            <h3 class="section-subtitle">Mark Guerrero</h3>
-            <p class="section-text">Product Designer</p>
-          </li>
-          <li class="section-list">
-            <img src="./images/img-2.jpg" alt="Tom" width="264" height="262" />
-            <h3 class="section-subtitle">Tom Ford</h3>
-            <p class="section-text">Frontend Developer</p>
-          </li>
-          <li class="section-list">
-            <img
-              src="./images/img-1.jpg"
-              alt="Camila"
-              width="264"
-              height="262"
-            />
-            <h3 class="section-subtitle">Camila Garcia</h3>
-            <p class="section-text">Marketing</p>
-          </li>
-          <li class="section-list">
-            <img src="./images/img.jpg" alt="Daniel" width="264" height="262" />
-            <h3 class="section-subtitle">Daniel Wilson</h3>
-            <p class="section-text">UI Designer</p>
-          </li>
-        </ul>
+      <section class="team section">
+        <div class="container">
+          <h2 class="section-title">Our Team</h2>
+          <ul>
+            <li class="section-list">
+              <img
+                src="./images/img-3.jpg"
+                alt="Mark"
+                width="264"
+                height="262"
+              />
+              <h3 class="section-subtitle">Mark Guerrero</h3>
+              <p class="section-text">Product Designer</p>
+            </li>
+            <li class="section-list">
+              <img
+                src="./images/img-2.jpg"
+                alt="Tom"
+                width="264"
+                height="262"
+              />
+              <h3 class="section-subtitle">Tom Ford</h3>
+              <p class="section-text">Frontend Developer</p>
+            </li>
+            <li class="section-list">
+              <img
+                src="./images/img-1.jpg"
+                alt="Camila"
+                width="264"
+                height="262"
+              />
+              <h3 class="section-subtitle">Camila Garcia</h3>
+              <p class="section-text">Marketing</p>
+            </li>
+            <li class="section-list">
+              <img
+                src="./images/img.jpg"
+                alt="Daniel"
+                width="264"
+                height="262"
+              />
+              <h3 class="section-subtitle">Daniel Wilson</h3>
+              <p class="section-text">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
 
-      <section class="portfolio">
-        <h2 class="section-title">Our Portfolio</h2>
-        <ul>
-          <li>
-            <img src="./images/banking-app.jpg" alt="Banking App" width="360" />
-            <h3 class="section-subtitle">Banking App</h3>
-            <p class="section-text">App</p>
-          </li>
-          <li>
-            <img
-              src="./images/cashless-payment.jpg"
-              alt="Cashless Payment"
-              width="360"
-            />
-            <h3 class="section-subtitle">Cashless Payment</h3>
-            <p class="section-text">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/meditation-app.jpg"
-              alt="Meditation App"
-              width="360"
-            />
-            <h3 class="section-subtitle">Meditation App</h3>
-            <p class="section-text">App</p>
-          </li>
-          <li>
-            <img
-              src="./images/taxi-service.jpg"
-              alt="Taxi Service"
-              width="360"
-            />
-            <h3 class="section-subtitle">Taxi Service</h3>
-            <p class="section-text">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/screen-illustrations.jpg"
-              alt="Screen Illustrations"
-              width="360"
-            />
-            <h3 class="section-subtitle">Screen Illustrations</h3>
-            <p class="section-text">Design</p>
-          </li>
-          <li>
-            <img
-              src="./images/online-courses.jpg"
-              alt="Online Courses"
-              width="360"
-            />
-            <h3 class="section-subtitle">Online Courses</h3>
-            <p class="section-text">Marketing</p>
-          </li>
-        </ul>
+      <section class="portfolio section">
+        <div class="container">
+          <h2 class="section-title">Our Portfolio</h2>
+          <ul>
+            <li>
+              <img
+                src="./images/banking-app.jpg"
+                alt="Banking App"
+                width="360"
+              />
+              <h3 class="section-subtitle">Banking App</h3>
+              <p class="section-text">App</p>
+            </li>
+            <li>
+              <img
+                src="./images/cashless-payment.jpg"
+                alt="Cashless Payment"
+                width="360"
+              />
+              <h3 class="section-subtitle">Cashless Payment</h3>
+              <p class="section-text">Marketing</p>
+            </li>
+            <li>
+              <img
+                src="./images/meditation-app.jpg"
+                alt="Meditation App"
+                width="360"
+              />
+              <h3 class="section-subtitle">Meditation App</h3>
+              <p class="section-text">App</p>
+            </li>
+            <li>
+              <img
+                src="./images/taxi-service.jpg"
+                alt="Taxi Service"
+                width="360"
+              />
+              <h3 class="section-subtitle">Taxi Service</h3>
+              <p class="section-text">Marketing</p>
+            </li>
+            <li>
+              <img
+                src="./images/screen-illustrations.jpg"
+                alt="Screen Illustrations"
+                width="360"
+              />
+              <h3 class="section-subtitle">Screen Illustrations</h3>
+              <p class="section-text">Design</p>
+            </li>
+            <li>
+              <img
+                src="./images/online-courses.jpg"
+                alt="Online Courses"
+                width="360"
+              />
+              <h3 class="section-subtitle">Online Courses</h3>
+              <p class="section-text">Marketing</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
-      <a class="footer-logo" href="./index.html"
-        >Web<span class="footer-accent">Studio</span></a
-      >
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <a class="footer-logo" href="./index.html"
+          >Web<span class="footer-accent">Studio</span></a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
