--- a/index.html
+++ b/index.html
@@ -25,20 +25,20 @@
   </head>
 
   <body>
-    <header>
+    <header class="top">
       <div class="container">
-        <nav>
+        <nav class="top-nav">
           <a href="./index.html" class="logo"
             >Web<span class="accent">Studio</span></a
           >
-          <ul>
+          <ul class="top-nav-list">
             <li><a class="nav-list" href="./index.html">Studio</a></li>
             <li><a class="nav-list" href="">Portfolio</a></li>
             <li><a class="nav-list" href="">Contacts</a></li>
           </ul>
         </nav>
         <address class="contacts">
-          <ul>
+          <ul class="top-contacts-list">
             <li>
               <a class="contacts-list" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
@@ -64,29 +64,29 @@
       <section class="advantages section">
         <div class="container">
           <h2 class="section-title">Advantages</h2>
-          <ul>
-            <li>
+          <ul class="advantages-list">
+            <li class="advantages-list-item">
               <h3 class="section-subtitle">Strategy</h3>
               <p class="section-text">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
-            <li>
+            <li class="advantages-list-item">
               <h3 class="section-subtitle">Punctuality</h3>
               <p class="section-text">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li>
+            <li class="advantages-list-item">
               <h3 class="section-subtitle">Diligence</h3>
               <p class="section-text">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li>
+            <li class="advantages-list-item">
               <h3 class="section-subtitle">Technologies</h3>
               <p class="section-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -100,46 +100,54 @@
       <section class="team section">
         <div class="container">
           <h2 class="section-title">Our Team</h2>
-          <ul>
-            <li class="section-list">
+          <ul class="team-list">
+            <li class="team-list-item">
               <img
                 src="./images/img-3.jpg"
                 alt="Mark"
                 width="264"
                 height="262"
               />
-              <h3 class="section-subtitle">Mark Guerrero</h3>
-              <p class="section-text">Product Designer</p>
+              <div class="team-info">
+                <h3 class="section-subtitle">Mark Guerrero</h3>
+                <p class="section-text">Product Designer</p>
+              </div>
             </li>
-            <li class="section-list">
+            <li class="team-list-item">
               <img
                 src="./images/img-2.jpg"
                 alt="Tom"
                 width="264"
                 height="262"
               />
-              <h3 class="section-subtitle">Tom Ford</h3>
-              <p class="section-text">Frontend Developer</p>
+              <div class="team-info">
+                <h3 class="section-subtitle">Tom Ford</h3>
+                <p class="section-text">Frontend Developer</p>
+              </div>
             </li>
-            <li class="section-list">
+            <li class="team-list-item">
               <img
                 src="./images/img-1.jpg"
                 alt="Camila"
                 width="264"
                 height="262"
               />
-              <h3 class="section-subtitle">Camila Garcia</h3>
-              <p class="section-text">Marketing</p>
+              <div class="team-info">
+                <h3 class="section-subtitle">Camila Garcia</h3>
+                <p class="section-text">Marketing</p>
+              </div>
             </li>
-            <li class="section-list">
+            <li class="team-list-item">
               <img
                 src="./images/img.jpg"
                 alt="Daniel"
                 width="264"
                 height="262"
               />
-              <h3 class="section-subtitle">Daniel Wilson</h3>
-              <p class="section-text">UI Designer</p>
+              <div class="team-info">
+                <h3 class="section-subtitle">Daniel Wilson</h3>
+                <p class="section-text">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -148,60 +156,72 @@
       <section class="portfolio section">
         <div class="container">
           <h2 class="section-title">Our Portfolio</h2>
-          <ul>
-            <li>
+          <ul class="portfolio-list">
+            <li class="portfolio-list-item">
               <img
                 src="./images/banking-app.jpg"
                 alt="Banking App"
                 width="360"
               />
-              <h3 class="section-subtitle">Banking App</h3>
-              <p class="section-text">App</p>
+              <div class="portfolio-info">
+                <h3 class="section-subtitle">Banking App</h3>
+                <p class="section-text">App</p>
+              </div>
             </li>
-            <li>
+            <li class="portfolio-list-item">
               <img
                 src="./images/cashless-payment.jpg"
                 alt="Cashless Payment"
                 width="360"
               />
-              <h3 class="section-subtitle">Cashless Payment</h3>
-              <p class="section-text">Marketing</p>
+              <div class="portfolio-info">
+                <h3 class="section-subtitle">Cashless Payment</h3>
+                <p class="section-text">Marketing</p>
+              </div>
             </li>
-            <li>
+            <li class="portfolio-list-item">
               <img
                 src="./images/meditation-app.jpg"
                 alt="Meditation App"
                 width="360"
               />
-              <h3 class="section-subtitle">Meditation App</h3>
-              <p class="section-text">App</p>
+              <div class="portfolio-info">
+                <h3 class="section-subtitle">Meditation App</h3>
+                <p class="section-text">App</p>
+              </div>
             </li>
-            <li>
+            <li class="portfolio-list-item">
               <img
                 src="./images/taxi-service.jpg"
                 alt="Taxi Service"
                 width="360"
               />
-              <h3 class="section-subtitle">Taxi Service</h3>
-              <p class="section-text">Marketing</p>
+              <div class="portfolio-info">
+                <h3 class="section-subtitle">Taxi Service</h3>
+                <p class="section-text">Marketing</p>
+              </div>
             </li>
-            <li>
+            <li class="portfolio-list-item">
               <img
                 src="./images/screen-illustrations.jpg"
                 alt="Screen Illustrations"
                 width="360"
               />
-              <h3 class="section-subtitle">Screen Illustrations</h3>
-              <p class="section-text">Design</p>
+              <div class="portfolio-info">
+                <h3 class="section-subtitle">Screen Illustrations</h3>
+                <p class="section-text">Design</p>
+              </div>
             </li>
-            <li>
+            <li class="portfolio-list-item">
               <img
                 src="./images/online-courses.jpg"
                 alt="Online Courses"
                 width="360"
               />
-              <h3 class="section-subtitle">Online Courses</h3>
-              <p class="section-text">Marketing</p>
+              <div class="portfolio-info">
+                <h3 class="section-subtitle">Online Courses</h3>
+                <p class="section-text">Marketing</p>
+              </div>
             </li>
           </ul>
         </div>
