--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
       <section class="advantages section">
         <div class="container">
-          <h2 class="section-title">Advantages</h2>
+          <h2 class="section-title visually-hidden">Advantages</h2>
           <ul class="advantages-list">
             <li class="advantages-list-item">
               <h3 class="section-subtitle">Strategy</h3>
