--- a/index.html
+++ b/index.html
@@ -66,6 +66,11 @@
           <h2 class="section-title visually-hidden">Advantages</h2>
           <ul class="advantages-list">
             <li class="advantages-list-item">
+              <div class="advantages-list-icon">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="section-subtitle">Strategy</h3>
               <p class="section-text">
                 Our goal is to identify the business problem to walk away with
@@ -73,6 +78,11 @@
               </p>
             </li>
             <li class="advantages-list-item">
+              <div class="advantages-list-icon">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="section-subtitle">Punctuality</h3>
               <p class="section-text">
                 Bring the key message to the brand's audience for the best price
@@ -80,6 +90,11 @@
               </p>
             </li>
             <li class="advantages-list-item">
+              <div class="advantages-list-icon">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="section-subtitle">Diligence</h3>
               <p class="section-text">
                 Research and confirm brands that present the strongest digital
@@ -87,6 +102,11 @@
               </p>
             </li>
             <li class="advantages-list-item">
+              <div class="advantages-list-icon">
+                <svg width="64" height="64">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="section-subtitle">Technologies</h3>
               <p class="section-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -112,6 +132,28 @@
                 <h3 class="section-subtitle">Mark Guerrero</h3>
                 <p class="section-text">Product Designer</p>
               </div>
+              <ul class="team-contacts">
+                <a href="" class="team-link">
+                  <svg width="16" height="16" class="team-link-icon">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+                <a href="" class="team-link">
+                  <svg width="16" height="16" class="team-link-icon">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+                <a href="" class="team-link">
+                  <svg width="16" height="16" class="team-link-icon">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+                <a href="" class="team-link">
+                  <svg width="16" height="16" class="team-link-icon">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </ul>
             </li>
             <li class="team-list-item">
               <img
@@ -124,6 +166,28 @@
                 <h3 class="section-subtitle">Tom Ford</h3>
                 <p class="section-text">Frontend Developer</p>
               </div>
+              <ul class="team-contacts">
+                <a href="" class="team-link">
+                  <svg width="16" height="16" class="team-link-icon">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+                <a href="" class="team-link">
+                  <svg width="16" height="16" class="team-link-icon">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+                <a href="" class="team-link">
+                  <svg width="16" height="16" class="team-link-icon">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+                <a href="" class="team-link">
+                  <svg width="16" height="16" class="team-link-icon">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </ul>
             </li>
             <li class="team-list-item">
               <img
@@ -136,6 +200,28 @@
                 <h3 class="section-subtitle">Camila Garcia</h3>
                 <p class="section-text">Marketing</p>
               </div>
+              <ul class="team-contacts">
+                <a href="" class="team-link">
+                  <svg width="16" height="16" class="team-link-icon">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+                <a href="" class="team-link">
+                  <svg width="16" height="16" class="team-link-icon">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+                <a href="" class="team-link">
+                  <svg width="16" height="16" class="team-link-icon">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+                <a href="" class="team-link">
+                  <svg width="16" height="16" class="team-link-icon">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </ul>
             </li>
             <li class="team-list-item">
               <img
@@ -148,6 +234,28 @@
                 <h3 class="section-subtitle">Daniel Wilson</h3>
                 <p class="section-text">UI Designer</p>
               </div>
+              <ul class="team-contacts">
+                <a href="" class="team-link">
+                  <svg width="16" height="16" class="team-link-icon">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+                <a href="" class="team-link">
+                  <svg width="16" height="16" class="team-link-icon">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+                <a href="" class="team-link">
+                  <svg width="16" height="16" class="team-link-icon">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+                <a href="" class="team-link">
+                  <svg width="16" height="16" class="team-link-icon">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </ul>
             </li>
           </ul>
         </div>
