--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
             >Web<span class="accent">Studio</span></a
           >
           <ul class="top-nav-list">
-            <li><a class="nav-list" href="./index.html">Studio</a></li>
+            <li>
+              <a class="nav-list nav-special" href="./index.html">Studio</a>
+            </li>
             <li><a class="nav-list" href="">Portfolio</a></li>
             <li><a class="nav-list" href="">Contacts</a></li>
           </ul>
@@ -131,29 +133,30 @@
               <div class="team-info">
                 <h3 class="section-subtitle">Mark Guerrero</h3>
                 <p class="section-text">Product Designer</p>
+
+                <ul class="team-contacts">
+                  <a href="" class="team-link">
+                    <svg width="16" height="16" class="team-link-icon">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                  <a href="" class="team-link">
+                    <svg width="16" height="16" class="team-link-icon">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                  <a href="" class="team-link">
+                    <svg width="16" height="16" class="team-link-icon">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                  <a href="" class="team-link">
+                    <svg width="16" height="16" class="team-link-icon">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </ul>
               </div>
-              <ul class="team-contacts">
-                <a href="" class="team-link">
-                  <svg width="16" height="16" class="team-link-icon">
-                    <use href="./images/icons.svg#icon-instagram"></use>
-                  </svg>
-                </a>
-                <a href="" class="team-link">
-                  <svg width="16" height="16" class="team-link-icon">
-                    <use href="./images/icons.svg#icon-twitter"></use>
-                  </svg>
-                </a>
-                <a href="" class="team-link">
-                  <svg width="16" height="16" class="team-link-icon">
-                    <use href="./images/icons.svg#icon-facebook"></use>
-                  </svg>
-                </a>
-                <a href="" class="team-link">
-                  <svg width="16" height="16" class="team-link-icon">
-                    <use href="./images/icons.svg#icon-linkedin"></use>
-                  </svg>
-                </a>
-              </ul>
             </li>
             <li class="team-list-item">
               <img
@@ -165,29 +168,30 @@
               <div class="team-info">
                 <h3 class="section-subtitle">Tom Ford</h3>
                 <p class="section-text">Frontend Developer</p>
+
+                <ul class="team-contacts">
+                  <a href="" class="team-link">
+                    <svg width="16" height="16" class="team-link-icon">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                  <a href="" class="team-link">
+                    <svg width="16" height="16" class="team-link-icon">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                  <a href="" class="team-link">
+                    <svg width="16" height="16" class="team-link-icon">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                  <a href="" class="team-link">
+                    <svg width="16" height="16" class="team-link-icon">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </ul>
               </div>
-              <ul class="team-contacts">
-                <a href="" class="team-link">
-                  <svg width="16" height="16" class="team-link-icon">
-                    <use href="./images/icons.svg#icon-instagram"></use>
-                  </svg>
-                </a>
-                <a href="" class="team-link">
-                  <svg width="16" height="16" class="team-link-icon">
-                    <use href="./images/icons.svg#icon-twitter"></use>
-                  </svg>
-                </a>
-                <a href="" class="team-link">
-                  <svg width="16" height="16" class="team-link-icon">
-                    <use href="./images/icons.svg#icon-facebook"></use>
-                  </svg>
-                </a>
-                <a href="" class="team-link">
-                  <svg width="16" height="16" class="team-link-icon">
-                    <use href="./images/icons.svg#icon-linkedin"></use>
-                  </svg>
-                </a>
-              </ul>
             </li>
             <li class="team-list-item">
               <img
@@ -199,29 +203,30 @@
               <div class="team-info">
                 <h3 class="section-subtitle">Camila Garcia</h3>
                 <p class="section-text">Marketing</p>
+
+                <ul class="team-contacts">
+                  <a href="" class="team-link">
+                    <svg width="16" height="16" class="team-link-icon">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                  <a href="" class="team-link">
+                    <svg width="16" height="16" class="team-link-icon">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                  <a href="" class="team-link">
+                    <svg width="16" height="16" class="team-link-icon">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                  <a href="" class="team-link">
+                    <svg width="16" height="16" class="team-link-icon">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </ul>
               </div>
-              <ul class="team-contacts">
-                <a href="" class="team-link">
-                  <svg width="16" height="16" class="team-link-icon">
-                    <use href="./images/icons.svg#icon-instagram"></use>
-                  </svg>
-                </a>
-                <a href="" class="team-link">
-                  <svg width="16" height="16" class="team-link-icon">
-                    <use href="./images/icons.svg#icon-twitter"></use>
-                  </svg>
-                </a>
-                <a href="" class="team-link">
-                  <svg width="16" height="16" class="team-link-icon">
-                    <use href="./images/icons.svg#icon-facebook"></use>
-                  </svg>
-                </a>
-                <a href="" class="team-link">
-                  <svg width="16" height="16" class="team-link-icon">
-                    <use href="./images/icons.svg#icon-linkedin"></use>
-                  </svg>
-                </a>
-              </ul>
             </li>
             <li class="team-list-item">
               <img
@@ -233,29 +238,30 @@
               <div class="team-info">
                 <h3 class="section-subtitle">Daniel Wilson</h3>
                 <p class="section-text">UI Designer</p>
+
+                <ul class="team-contacts">
+                  <a href="" class="team-link">
+                    <svg width="16" height="16" class="team-link-icon">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                  <a href="" class="team-link">
+                    <svg width="16" height="16" class="team-link-icon">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                  <a href="" class="team-link">
+                    <svg width="16" height="16" class="team-link-icon">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                  <a href="" class="team-link">
+                    <svg width="16" height="16" class="team-link-icon">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </ul>
               </div>
-              <ul class="team-contacts">
-                <a href="" class="team-link">
-                  <svg width="16" height="16" class="team-link-icon">
-                    <use href="./images/icons.svg#icon-instagram"></use>
-                  </svg>
-                </a>
-                <a href="" class="team-link">
-                  <svg width="16" height="16" class="team-link-icon">
-                    <use href="./images/icons.svg#icon-twitter"></use>
-                  </svg>
-                </a>
-                <a href="" class="team-link">
-                  <svg width="16" height="16" class="team-link-icon">
-                    <use href="./images/icons.svg#icon-facebook"></use>
-                  </svg>
-                </a>
-                <a href="" class="team-link">
-                  <svg width="16" height="16" class="team-link-icon">
-                    <use href="./images/icons.svg#icon-linkedin"></use>
-                  </svg>
-                </a>
-              </ul>
             </li>
           </ul>
         </div>
