--- a/index.html
+++ b/index.html
@@ -134,31 +134,31 @@
                 <h3 class="section-subtitle">Mark Guerrero</h3>
                 <p class="section-text">Product Designer</p>
 
-                <ul class="team-contacts">
-                  <li>
-                    <a href="" class="team-link">
-                      <svg width="16" height="16" class="team-link-icon">
+                <ul class="social-contacts">
+                  <li class="social-contacts-list">
+                    <a href="" class="social-link">
+                      <svg width="16" height="16" class="social-link-icon">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
-                    <a href="" class="team-link">
-                      <svg width="16" height="16" class="team-link-icon">
+                  <li class="social-contacts-list">
+                    <a href="" class="social-link">
+                      <svg width="16" height="16" class="social-link-icon">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
-                    <a href="" class="team-link">
-                      <svg width="16" height="16" class="team-link-icon">
+                  <li class="social-contacts-list">
+                    <a href="" class="social-link">
+                      <svg width="16" height="16" class="social-link-icon">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
-                    <a href="" class="team-link">
-                      <svg width="16" height="16" class="team-link-icon">
+                  <li class="social-contacts-list">
+                    <a href="" class="social-link">
+                      <svg width="16" height="16" class="social-link-icon">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -177,31 +177,47 @@
                 <h3 class="section-subtitle">Tom Ford</h3>
                 <p class="section-text">Frontend Developer</p>
 
-                <ul class="team-contacts">
-                  <li>
-                    <a href="" class="team-link">
-                      <svg width="16" height="16" class="team-link-icon">
+                <ul class="socialsocial-contacts">
+                  <li class="socialsocial-contacts-list">
+                    <a href="" class="socialsocial-link">
+                      <svg
+                        width="16"
+                        height="16"
+                        class="socialsocial-link-icon"
+                      >
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
-                    <a href="" class="team-link">
-                      <svg width="16" height="16" class="team-link-icon">
+                  <li class="socialsocial-contacts-list">
+                    <a href="" class="socialsocial-link">
+                      <svg
+                        width="16"
+                        height="16"
+                        class="socialsocial-link-icon"
+                      >
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
-                    <a href="" class="team-link">
-                      <svg width="16" height="16" class="team-link-icon">
+                  <li class="socialsocial-contacts-list">
+                    <a href="" class="socialsocial-link">
+                      <svg
+                        width="16"
+                        height="16"
+                        class="socialsocial-link-icon"
+                      >
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
-                    <a href="" class="team-link">
-                      <svg width="16" height="16" class="team-link-icon">
+                  <li class="socialsocial-contacts-list">
+                    <a href="" class="socialsocial-link">
+                      <svg
+                        width="16"
+                        height="16"
+                        class="socialsocial-link-icon"
+                      >
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -220,31 +236,31 @@
                 <h3 class="section-subtitle">Camila Garcia</h3>
                 <p class="section-text">Marketing</p>
 
-                <ul class="team-contacts">
-                  <li>
-                    <a href="" class="team-link">
-                      <svg width="16" height="16" class="team-link-icon">
+                <ul class="social-contacts">
+                  <li class="social-contacts-list">
+                    <a href="" class="social-link">
+                      <svg width="16" height="16" class="social-link-icon">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
-                    <a href="" class="team-link">
-                      <svg width="16" height="16" class="team-link-icon">
+                  <li class="social-contacts-list">
+                    <a href="" class="social-link">
+                      <svg width="16" height="16" class="social-link-icon">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
-                    <a href="" class="team-link">
-                      <svg width="16" height="16" class="team-link-icon">
+                  <li class="social-contacts-list">
+                    <a href="" class="social-link">
+                      <svg width="16" height="16" class="social-link-icon">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
-                    <a href="" class="team-link">
-                      <svg width="16" height="16" class="team-link-icon">
+                  <li class="social-contacts-list">
+                    <a href="" class="social-link">
+                      <svg width="16" height="16" class="social-link-icon">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -263,31 +279,31 @@
                 <h3 class="section-subtitle">Daniel Wilson</h3>
                 <p class="section-text">UI Designer</p>
 
-                <ul class="team-contacts">
-                  <li>
-                    <a href="" class="team-link">
-                      <svg width="16" height="16" class="team-link-icon">
+                <ul class="social-contacts">
+                  <li class="social-contacts-list">
+                    <a href="" class="social-link">
+                      <svg width="16" height="16" class="social-link-icon">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li>
-                    <a href="" class="team-link">
-                      <svg width="16" height="16" class="team-link-icon">
+                    <a href="" class="social-link">
+                      <svg width="16" height="16" class="social-link-icon">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
-                    <a href="" class="team-link">
-                      <svg width="16" height="16" class="team-link-icon">
+                  <li class="social-contacts-list">
+                    <a href="" class="social-link">
+                      <svg width="16" height="16" class="social-link-icon">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
-                    <a href="" class="team-link">
-                      <svg width="16" height="16" class="team-link-icon">
+                  <li class="social-contacts-list">
+                    <a href="" class="social-link">
+                      <svg width="16" height="16" class="social-link-icon">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -304,66 +320,108 @@
           <h2 class="section-title">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-list-item">
-              <img
-                src="./images/banking-app.jpg"
-                alt="Banking App"
-                width="360"
-              />
+              <div class="portfolio-unhide">
+                <img
+                  src="./images/banking-app.jpg"
+                  alt="Banking App"
+                  width="360"
+                />
+                <p class="portfolio-unhide-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-info">
                 <h3 class="section-subtitle">Banking App</h3>
                 <p class="section-text">App</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
-                src="./images/cashless-payment.jpg"
-                alt="Cashless Payment"
-                width="360"
-              />
+              <div class="portfolio-unhide">
+                <img
+                  src="./images/cashless-payment.jpg"
+                  alt="Cashless Payment"
+                  width="360"
+                />
+                <p class="portfolio-unhide-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-info">
                 <h3 class="section-subtitle">Cashless Payment</h3>
                 <p class="section-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
-                src="./images/meditation-app.jpg"
-                alt="Meditation App"
-                width="360"
-              />
+              <div class="portfolio-unhide">
+                <img
+                  src="./images/meditation-app.jpg"
+                  alt="Meditation App"
+                  width="360"
+                />
+                <p class="portfolio-unhide-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-info">
                 <h3 class="section-subtitle">Meditation App</h3>
                 <p class="section-text">App</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
-                src="./images/taxi-service.jpg"
-                alt="Taxi Service"
-                width="360"
-              />
+              <div class="portfolio-unhide">
+                <img
+                  src="./images/taxi-service.jpg"
+                  alt="Taxi Service"
+                  width="360"
+                />
+                <p class="portfolio-unhide-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-info">
                 <h3 class="section-subtitle">Taxi Service</h3>
                 <p class="section-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
-                src="./images/screen-illustrations.jpg"
-                alt="Screen Illustrations"
-                width="360"
-              />
+              <div class="portfolio-unhide">
+                <img
+                  src="./images/screen-illustrations.jpg"
+                  alt="Screen Illustrations"
+                  width="360"
+                />
+                <p class="portfolio-unhide-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-info">
                 <h3 class="section-subtitle">Screen Illustrations</h3>
                 <p class="section-text">Design</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
-                src="./images/online-courses.jpg"
-                alt="Online Courses"
-                width="360"
-              />
+              <div class="portfolio-unhide">
+                <img
+                  src="./images/online-courses.jpg"
+                  alt="Online Courses"
+                  width="360"
+                />
+                <p class="portfolio-unhide-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-info">
                 <h3 class="section-subtitle">Online Courses</h3>
                 <p class="section-text">Marketing</p>
@@ -375,13 +433,48 @@
     </main>
     <footer class="footer">
       <div class="container">
-        <a class="footer-logo" href="./index.html"
-          >Web<span class="footer-accent">Studio</span></a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+        <div class="footer-left">
+          <a class="footer-logo" href="./index.html"
+            >Web<span class="footer-accent">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+      </div>
+      <div class="footer-social">
+        <p class="footer-social-text">Social media</p>
+        <ul class="social-contacts">
+          <li class="social-contacts-list">
+            <a href="" class="social-link">
+              <svg width="24" height="24" class="social-link-icon">
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-contacts-list">
+            <a href="" class="social-link">
+              <svg width="24" height="24" class="social-link-icon">
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-contacts-list">
+            <a href="" class="social-link">
+              <svg width="24" height="24" class="social-link-icon">
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-contacts-list">
+            <a href="" class="social-link">
+              <svg width="24" height="24" class="social-link-icon">
+                <use href="./images/icons.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
       </div>
     </footer>
   </body>
