--- a/index.html
+++ b/index.html
@@ -176,15 +176,10 @@
               <div class="team-info">
                 <h3 class="section-subtitle">Tom Ford</h3>
                 <p class="section-text">Frontend Developer</p>
-
                 <ul class="socialsocial-contacts">
                   <li class="socialsocial-contacts-list">
                     <a href="" class="socialsocial-link">
-                      <svg
-                        width="16"
-                        height="16"
-                        class="socialsocial-link-icon"
-                      >
+                      <svg width="16" height="16" class="social-link-icon">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
