--- a/index.html
+++ b/index.html
@@ -176,43 +176,31 @@
               <div class="team-info">
                 <h3 class="section-subtitle">Tom Ford</h3>
                 <p class="section-text">Frontend Developer</p>
-                <ul class="socialsocial-contacts">
-                  <li class="socialsocial-contacts-list">
-                    <a href="" class="socialsocial-link">
+                <ul class="social-contacts">
+                  <li class="social-contacts-list">
+                    <a href="" class="social-link">
                       <svg width="16" height="16" class="social-link-icon">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="socialsocial-contacts-list">
-                    <a href="" class="socialsocial-link">
-                      <svg
-                        width="16"
-                        height="16"
-                        class="socialsocial-link-icon"
-                      >
+                  <li class="social-contacts-list">
+                    <a href="" class="social-link">
+                      <svg width="16" height="16" class="social-link-icon">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="socialsocial-contacts-list">
-                    <a href="" class="socialsocial-link">
-                      <svg
-                        width="16"
-                        height="16"
-                        class="socialsocial-link-icon"
-                      >
+                  <li class="social-contacts-list">
+                    <a href="" class="social-link">
+                      <svg width="16" height="16" class="social-link-icon">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="socialsocial-contacts-list">
-                    <a href="" class="socialsocial-link">
-                      <svg
-                        width="16"
-                        height="16"
-                        class="socialsocial-link-icon"
-                      >
+                  <li class="social-contacts-list">
+                    <a href="" class="social-link">
+                      <svg width="16" height="16" class="social-link-icon">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
